[package]
name = "cpp20modules_tools"
authors = ["pikachuhy@linux.alibaba.com"]
version = "0.1.0"
edition = "2021"
description = "A toolkit for handling C++20 modules"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[[bin]]
name = "agg-ddi"
path = "src/bin/agg-ddi.rs"

[[bin]]
name = "gen-modmap"
path = "src/bin/gen-modmap.rs"